--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -10,15 +10,17 @@
 
 
   <extensions defaultExtensionNs="com.intellij">
-    <checkinHandlerFactory implementation="main.extension.CommitFactory"/>
+    <extension id="main.extension.CommitFactory"/>
+   <!-- <checkinHandlerFactory implementation="main.extension.CommitFactory"/>-->
   </extensions>
 
   <actions>
     <group id="MyPlugin.SampleMenu" text="TestSmell detection" description="Sample menu" popup="true">
-      <add-to-group group-id="AnalyzeMenu" anchor="last"  />
+      <!--<add-to-group group-id="" anchor="last"  />-->
       <action id="Myplugin.TextSmellTextualDetection" class="main.action.TextualDetectionAction" text="Execute Textual detection" description="A test menu item" />
       <action id="Myplugin.TextSmellStructuralDetection" class="main.action.StructuralDetectionAction" text="Execute Structural detection" description="A test menu item" />
     </group>
   </actions>
+
 
 </idea-plugin>
