--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,15 +8,17 @@
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
   <idea-version since-build="183.0"/>
 
+  <depends>com.intellij.modules.platform</depends>
+  <depends>com.intellij.java</depends>
 
   <extensions defaultExtensionNs="com.intellij">
     <extension id="main.extension.CommitFactory"/>
-   <!-- <checkinHandlerFactory implementation="main.extension.CommitFactory"/>-->
+    <checkinHandlerFactory implementation="main.extension.CommitFactory"/>
   </extensions>
 
   <actions>
     <group id="MyPlugin.SampleMenu" text="TestSmell detection" description="Sample menu" popup="true">
-      <!--<add-to-group group-id="" anchor="last"  />-->
+      <add-to-group group-id="AnalyzeMenu" anchor="last"  />
       <action id="Myplugin.TextSmellTextualDetection" class="main.action.TextualDetectionAction" text="Execute Textual detection" description="A test menu item" />
       <action id="Myplugin.TextSmellStructuralDetection" class="main.action.StructuralDetectionAction" text="Execute Structural detection" description="A test menu item" />
     </group>
