--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.intellij' version '0.7.2'
 }
 
-version '1.0-SNAPSHOT'
+version '2.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -28,7 +28,7 @@ dependencies {
 }
 
 intellij {
-    version /*'2020.3.3'*/ '2021.1'
+    version '2020.3' /*'2021.1' | 2020.3.3 */
     plugins = ['com.intellij.java']
 }
 
